# export-for-ai

./: .exportignore  .gitignore  CLAUDE.md  Makefile  README.md  app_main.py  config.yaml  pyproject.toml  quick_test_systray.py  setup.py  systray_app.py  ui_config.json  web_ui.py
.claude/: settings.local.json
docs/: api-reference.md  architecture.md  development-guide.md  technical-implementation.md
export-for-ai-extension/: package-lock.json
prompts/: goal.md  template.md
src/: main.py
src/export_for_ai/: folder_exporter.py  ignore_generator.py  ignore_parser.py  main.py  readme-generator.py  readme_generator.py  section_manager.py  tree_visualizer.py
src/export_for_ai/ignore_templates/: default.template  light.template
templates/: index.html
test_md_bug/: .exportignore
tests/: __init__.py  test_ignore_generator.py  test_ignore_parser.py  test_main.py
