[tool.poetry]
name = "export-for-ai"
version = "0.3.0"
description = ""
authors = ["KindEmily <evlasiuk@asclepyus.com>"]
readme = "README.md"
packages = [
    { include = "export_for_ai", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
pathspec = "^0.12.1"
anytree = "^2.12.1"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
anytree = "^2.12.1"
pathspec = "^0.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
export-for-ai = "export_for_ai.main:main"
