[tool.poetry]
name = "export-for-ai"
version = "0.5.0"
description = ""
authors = ["KindEmily <evlasiuk@asclepyus.com>"]
readme = "README.md"
packages = [
    { include = "export_for_ai", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
pathspec = "^0.12.1" 
anytree = "^2.12.1"
pyyaml = "^6.0.2"
pyperclip = "^1.9.0"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pystray = "^0.19.0"
pynput = "^1.7.6"
Pillow = "^10.4.0"

[tool.poetry.group.dev.dependencies]
anytree = "^2.12.1"
pathspec = "^0.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
export-for-ai = "export_for_ai.main:main"